# solana-twitter-react

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .eslintrc.json  package.json  tailwind.config.js
app/components/: Sidebar.jsx  TweetCard.jsx  TweetForm.jsx  TweetList.jsx  TweetSearch.jsx
app/idl/: solana_twitter_react.json
app/pages/: 404.jsx  Home.jsx  NotFound.jsx  Profile.jsx  Topics.jsx  Tweet.jsx  Users.jsx  _app.jsx  _document.jsx  index.js  index.jsx
app/pages/api/: fetch-tweets.js  get-tweet.js  send-tweet.js
app/pages/profile/: index.jsx
app/pages/topics/: [topic].jsx  index.jsx
app/pages/tweet/: [tweet].jsx  index.jsx
app/pages/users/: [user].jsx  index.jsx
app/public/: browserconfig.xml  index.html
app/public/assets/: icons.js
app/styles/: globals.css
app/templates/: Base.jsx  Search.jsx
app/utils/: index.js  toCapitalize.js  useAutoresizeTextarea.js  useCountCharacterLimit.js  useSlug.js  useWorkspace.js
programs/solana-twitter-react/: Cargo.toml
programs/solana-twitter-react/src/: lib.rs
tests/: solana-twitter-react.ts
